<?xml version="1.0"?>
<package format="2">
    <name>piper_interface</name>
    <version>0.0.0</version>
    <description>The piper_interface package</description>

    <maintainer email="kaerei@foxmail.com">Kaede Rei</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>geometry_msgs</depend>
    <depend>moveit_core</depend>
    <depend>moveit_ros_planning_interface</depend>
    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>std_srvs</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>tf2_ros</depend>

    <depend>piper_controller</depend>
    <depend>piper_commander</depend>
    <depend>piper_msgs</depend>

    <export>

    </export>
</package>
