<?xml version="1.0"?>
<package format="2">
    <name>piper_msgs</name>
    <version>0.0.0</version>
    <description>description</description>

    <maintainer email="kaerei@foxmail.com">Kaede Rei</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>message_generation</build_depend>

    <build_export_depend>message_runtime</build_export_depend>

    <exec_depend>message_runtime</exec_depend>

    <depend>geometry_msgs</depend>
    <depend>std_msgs</depend>
    <depend>actionlib_msgs</depend>

</package>